--- a/admin/package.json
+++ b/admin/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "next": "14.2.5",
+    "quill": "^2.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
