--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.57.4",
     "next": "14.2.5",
     "quill": "^2.0.3",
